--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "express": "^4.19.2",
     "express-session": "^1.17.3",
     "morgan": "^1.10.0",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -25,6 +26,8 @@
     "@types/express-session": "^1.17.8",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.10.6",
+    "@types/pg": "^8.16.0",
+    "@types/swagger-ui-express": "^4.1.3",
     "prettier": "^3.2.5",
     "tsx": "^4.16.2",
     "typescript": "^5.4.5"
